--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,13 @@
         "ext-calendar": "*",
         "ext-intl": "*",
         "ext-pdo": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
